--- a/boards/arm/5x12/5x12_defconfig
+++ b/boards/arm/5x12/5x12_defconfig
@@ -25,3 +25,6 @@ CONFIG_FLASH_MAP=y
 # Enable NKRO
 CONFIG_ZMK_HID_REPORT_TYPE_NKRO=y
 
+# Turn on logging, and set ZMK logging to debug output
+CONFIG_ZMK_USB_LOGGING=y
+
