feat: increase bluetooth transmit power

--- a/boards/arm/5x12/5x12_defconfig
+++ b/boards/arm/5x12/5x12_defconfig
@@ -30,3 +30,5 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 # Enable NKRO
 CONFIG_ZMK_HID_REPORT_TYPE_NKRO=y
 
+# Increase Bluetooth transmit power
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
