feat: add power management sleep settings

--- a/boards/arm/5x12/5x12_defconfig
+++ b/boards/arm/5x12/5x12_defconfig
@@ -10,8 +10,6 @@ CONFIG_ARM_MPU=y
 # enable GPIO
 CONFIG_GPIO=y
 
-CONFIG_ZMK_SLEEP=y
-
 CONFIG_USE_DT_CODE_PARTITION=y
 CONFIG_BUILD_OUTPUT_UF2=y
 
@@ -21,6 +19,11 @@ CONFIG_SETTINGS_NVS=y
 CONFIG_FLASH=y
 CONFIG_FLASH_PAGE_LAYOUT=y
 CONFIG_FLASH_MAP=y
+
+# Power Management
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_TIMEOUT=30000
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 
 # Enable NKRO
 CONFIG_ZMK_HID_REPORT_TYPE_NKRO=y
